# JimsHWCommon

./: .gitignore  CMakeLists.txt  README.md
include/: ads1015.h  i2c.h  serLCD.h  tmp117.h
scripts/: mySqlTest.sh
source/: ads1015.cpp  i2cSingleton.cpp  serLCD.cpp  tmp117.cpp
source/raspi/: i2c.cpp
test/: ads1015Test.cpp  i2cSingletonTest.cpp  i2cTest.cpp  lcdTest.cpp  tmp117Test.cpp
